--- a/src/_includes/manifest.json
+++ b/src/_includes/manifest.json
@@ -1,4 +1,4 @@
 {
-  "critical.js": "0ddaa55f.js",
-  "other.js": "580a0026.js"
+  "critical.js": "assets/0ddaa55f.js",
+  "other.js": "assets/580a0026.js"
 }
