--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx gulp && concurrently \"npx gulp watch\" \"npx eleventy --serve\"",
+    "start": "npx gulp && concurrently \"npx gulp watch\" \"npx eleventy --watch\" \"es-dev-server\"",
     "build": "rm -rf dist && NODE_ENV=production rollup -c rollup.config.js && NODE_ENV=production npx gulp && NODE_ENV=production npx eleventy"
   },
   "keywords": [],
@@ -20,19 +20,22 @@
     "babel-plugin-bare-import-rewrite": "^2.0.0",
     "concurrently": "^5.3.0",
     "deepmerge": "^4.2.2",
+    "es-dev-server": "^1.57.3",
     "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-sass": "^4.1.0",
+    "i": "^0.3.6",
     "luxon": "^1.21.3",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.2.5",
+    "npm": "^6.14.8",
     "rollup": "^2.26.2",
     "rollup-plugin-output-manifest": "^1.0.2",
     "sass": "^1.26.10"
   },
   "dependencies": {
     "get-google-fonts": "^1.2.2",
+    "lit-element": "^2.4.0",
     "lit-html": "^1.2.1"
   }
 }
