--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "luxon": "^1.21.3",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.2.5",
+    "markdown-it-imsize": "^2.0.1",
     "npm": "^6.14.8",
     "rollup": "^2.26.2",
     "rollup-plugin-output-manifest": "^1.0.2",
@@ -36,6 +37,7 @@
   "dependencies": {
     "get-google-fonts": "^1.2.2",
     "lit-element": "^2.4.0",
-    "lit-html": "^1.2.1"
+    "lit-html": "^1.2.1",
+    "lite-youtube-embed": "0.0.0"
   }
 }
