--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "prism-themes": "^1.4.0",
     "rollup": "^2.26.2",
     "rollup-plugin-output-manifest": "^1.0.2",
-    "sass": "^1.26.10"
+    "sass": "^1.26.10",
+    "terser": "^5.3.2"
   },
   "dependencies": {
     "get-google-fonts": "^1.2.2",
