--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "babel-plugin-bare-import-rewrite": "^2.0.0",
     "concurrently": "^5.3.0",
     "deepmerge": "^4.2.2",
+    "eleventy-plugin-reading-time": "0.0.1",
+    "eleventy-plugin-time-to-read": "^0.1.1",
     "es-dev-server": "^1.57.3",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
