--- a/package.json
+++ b/package.json
@@ -17,29 +17,25 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
     "@open-wc/building-rollup": "^1.7.0",
     "@rollup/stream": "^1.0.0",
-    "babel-plugin-bare-import-rewrite": "^2.0.0",
     "concurrently": "^5.3.0",
     "deepmerge": "^4.2.2",
-    "eleventy-plugin-reading-time": "0.0.1",
     "eleventy-plugin-time-to-read": "^0.1.1",
     "es-dev-server": "^1.57.3",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-sass": "^4.1.0",
-    "i": "^0.3.6",
     "luxon": "^1.21.3",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.2.5",
     "markdown-it-imsize": "^2.0.1",
-    "npm": "^6.14.8",
     "prism-themes": "^1.4.0",
     "rollup": "^2.26.2",
     "rollup-plugin-output-manifest": "^1.0.2",
     "sass": "^1.26.10",
-    "terser": "^5.3.2"
+    "terser": "^5.3.2",
+    "get-google-fonts": "^1.2.2"
   },
   "dependencies": {
-    "get-google-fonts": "^1.2.2",
     "lit-element": "^2.4.0",
     "lit-html": "^1.2.1",
     "lite-youtube-embed": "0.0.0"
