image optimization impl from https://github.com/google/eleventy-high-performance-blog

--- a/package.json
+++ b/package.json
@@ -17,23 +17,27 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
     "@open-wc/building-rollup": "^1.7.0",
     "@rollup/stream": "^1.0.0",
+    "@saschazar/wasm-avif": "^1.0.0",
     "concurrently": "^5.3.0",
+    "datauri": "^3.0.0",
     "deepmerge": "^4.2.2",
     "eleventy-plugin-time-to-read": "^0.1.1",
     "es-dev-server": "^1.57.3",
+    "get-google-fonts": "^1.2.2",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-sass": "^4.1.0",
+    "image-size": "^0.9.1",
+    "jsdom": "^16.4.0",
     "luxon": "^1.21.3",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.2.5",
-    "markdown-it-imsize": "^2.0.1",
     "prism-themes": "^1.4.0",
     "rollup": "^2.26.2",
     "rollup-plugin-output-manifest": "^1.0.2",
     "sass": "^1.26.10",
-    "terser": "^5.3.2",
-    "get-google-fonts": "^1.2.2"
+    "sharp": "^0.26.1",
+    "terser": "^5.3.2"
   },
   "dependencies": {
     "lit-element": "^2.4.0",
