--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx gulp && concurrently \"npx gulp watch\" \"npx eleventy --watch\" \"es-dev-server\"",
+    "start": "npx gulp && concurrently \"npx gulp watch\" \"npx eleventy --watch\" \"web-dev-server\"",
     "build": "rm -rf dist && NODE_ENV=production rollup -c rollup.config.js && NODE_ENV=production npx gulp && NODE_ENV=production npx eleventy"
   },
   "keywords": [],
@@ -18,6 +18,7 @@
     "@open-wc/building-rollup": "^1.7.0",
     "@rollup/stream": "^1.0.0",
     "@saschazar/wasm-avif": "^1.0.0",
+    "@web/dev-server": "0.0.13",
     "concurrently": "^5.3.0",
     "datauri": "^3.0.0",
     "deepmerge": "^4.2.2",
