--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0",
+    "@11ty/eleventy-img": "^0.8.2",
     "@11ty/eleventy-navigation": "^0.1.6",
     "@11ty/eleventy-plugin-rss": "^1.0.9",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
     "@open-wc/building-rollup": "^1.7.0",
     "@rollup/stream": "^1.0.0",
-    "@saschazar/wasm-avif": "^1.0.0",
     "@web/dev-server": "0.0.13",
     "concurrently": "^5.3.0",
     "datauri": "^3.0.0",
@@ -30,7 +30,7 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-sass": "^4.1.0",
     "image-size": "^0.9.1",
-    "jsdom": "^16.4.0",
+    "jsdom": "^16.5.1",
     "luxon": "^1.21.3",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.2.5",
