--- a/package.json
+++ b/package.json
@@ -43,9 +43,8 @@
     "terser": "^5.3.2"
   },
   "dependencies": {
-    "copy-component": "0.0.8",
-    "lit-element": "^2.4.0",
-    "lit-html": "^1.2.1",
+    "copy-component": "^0.1.0",
+    "lit": "^2.0.2",
     "lite-youtube-embed": "0.0.0",
     "query-selector-shadow-dom": "^1.0.0"
   }
