11ty copy plugin integration and docs

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "datauri": "^3.0.0",
     "deepmerge": "^4.2.2",
     "eleventy-plugin-embed-twitter": "^1.0.1",
+    "eleventy-plugin-markdown-copy-button": "^0.6.0",
     "eleventy-plugin-time-to-read": "^0.1.1",
     "es-dev-server": "^1.57.3",
     "get-google-fonts": "^1.2.2",
