test adding a second one

--- a/.github/workflows/test-status.yml
+++ b/.github/workflows/test-status.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        SUPPORTED_STATUS_CHECKS: ["ci/circleci: docker"]
+        SUPPORTED_STATUS_CHECKS: ["ci/circleci: docker", "test new"]
     steps:
       - name: Add Status Check Runner
         if: ${{ contains(matrix.SUPPORTED_STATUS_CHECKS, github.event.context)}}
