--- a/.github/workflows/test-status.yml
+++ b/.github/workflows/test-status.yml
@@ -17,8 +17,8 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const payload = context.payload;
-            const { repository, commit, ref } = payload;
+            const {payload, ref, sha } = context;
+            const { repository, commit } = payload;
             const statusName = payload.context;
             const state = payload.state;
             const repoName = repository.name;
