--- a/.github/workflows/test-status.yml
+++ b/.github/workflows/test-status.yml
@@ -18,17 +18,17 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const {payload, ref, repo } = context;
-            const { repository, commit } = payload;
+            const { commit } = payload;
             const statusName = payload.context;
             const state = payload.state;
-            const repoName = repository.name;
+            const repoName = repo.repo;
 
             const sha = commit.sha;
-            const owner = repository.owner;
+            const owner = repo.owner;
             const branch = ref.replace("refs/heads/", "");
             const link = `https://griffa.dev`;
             const description = `My special link for ${statusName}`;
-            console.log(repo);
+            console.log(JSON.stringify(context));
             const args = {
               owner,
               repo: repoName,
