--- a/.github/workflows/test-status.yml
+++ b/.github/workflows/test-status.yml
@@ -35,7 +35,7 @@ jobs:
               state,
               description,
               target_url: state === "pending" ? null: link,
-              context: "🧪  My special link"
+              context: "My special link"
             };
             console.table(args);
             await github.rest.repos.createCommitStatus(args);
