--- a/.github/workflows/experiment.yml
+++ b/.github/workflows/experiment.yml
@@ -19,8 +19,8 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
+            const {payload, ref, repo, matrix } = context;
             console.log(matrix);
-            const {payload, ref, repo } = context;
             const { commit } = payload;
             const statusName = payload.context;
             const state = payload.state;
