--- a/.github/workflows/experiment.yml
+++ b/.github/workflows/experiment.yml
@@ -20,7 +20,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const {payload, ref, repo } = context;
-            console.log(context.payload.matrix);
+            console.log(process.env);
             const { commit } = payload;
             const statusName = payload.context;
             const state = payload.state;
