--- a/.github/workflows/exp.yml
+++ b/.github/workflows/exp.yml
@@ -22,15 +22,13 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const {payload, ref, repo } = context;
+            const {payload, ref, repo, branches } = context;
             console.table(ref);
-            console.log(process.env);
             const { commit } = payload;
             const statusName = payload.context;
             const state = payload.state;
             const repoName = repo.repo;
-            console.table(commit);
-            console.table(payload);
+            console.table(JSON.stringify(branches));
             const sha = commit.sha;
             const owner = repo.owner;
             const branch = ref.replace("refs/heads/", "");
