--- a/.github/workflows/exp.yml
+++ b/.github/workflows/exp.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const {payload, ref, repo, branches } = context;
+            const {payload, ref, repo } = context;
             console.table(ref);
             const { commit, branches} = payload;
             const statusName = payload.context;
